--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Test</h1>
+  <img src="img/image-qr-code.png" alt="QRCode">
 </body>
 </html>
