--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QR</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <img src="img/image-qr-code.png" alt="QRCode">
+  <div class="card">
+    <div class="card__img">
+      <img src="img/image-qr-code.png" alt="QRCode">
+    </div>
+    <div class="card__caption">
+      <p class="card__title">Improve your front-end skills by building projects</p>
+      <p class="card__paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+  </div>
 </body>
 </html>
