--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 <body>
   <div class="card">
-    <div class="card__img">
-      <img src="img/image-qr-code.png" alt="QRCode">
-    </div>
+    <img class="card__img" src="img/image-qr-code.png" alt="QRCode">
     <div class="card__caption">
       <p class="card__title">Improve your front-end skills by building projects</p>
       <p class="card__paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
